--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"pnpm run server\" \"pnpm run frontend\" --names \"SERVER,FRONTEND\" --prefix-colors \"blue,green\"",
+    "dev": "concurrently \"pnpm run server:watch\" \"pnpm run frontend\" --names \"SERVER,FRONTEND\" --prefix-colors \"blue,green\"",
     "frontend": "vite --port 3000",
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
     "server": "node server.js",
+    "server:watch": "node --watch server.js",
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
@@ -16,10 +17,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.66.5",
@@ -27,11 +31,10 @@
     "@tanstack/react-router-devtools": "^1.121.2",
     "@tanstack/router-plugin": "^1.121.2",
     "@types/node": "^24.0.1",
-    "@xzdarcy/react-timeline-editor": "^0.1.9",
     "axios": "^1.10.0",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ffmpeg": "^0.0.4",
     "hono": "^4.6.10",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
