--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hono": "^4.6.10",
     "lucide-react": "^0.476.0",
     "media-chrome": "^4.11.1",
+    "motion": "^12.23.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
